# cargo2nix_cycle_failure

./: Cargo.nix  Cargo.toml  flake.nix
src/: lib.rs
