[package]
name = "cargo2nix_cycle_failure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { git = "https://github.com/async-graphql/async-graphql", rev = "e99a6bb8af0313fdf470e605ba3ccd30a2988179" }
